--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -52,7 +52,7 @@ jobs:
               const contents = await fs.readFile(file, 'utf8');
               const image = yaml.load(contents);
 
-              core.log(image);
+              core.info(image);
 
               if (!image.version) {
 
