--- a/images/VSCodeBox/image.yml
+++ b/images/VSCodeBox/image.yml
@@ -1,7 +1,8 @@
+description: Windows 11 Enterprise + M365 Apps + VSCode
 publisher: Contoso
 offer: DevBox
 sku: win11-vscode
-version: 1.0.2
+version: 1.0.3
 os: Windows
 locations:
   - eastus
