--- a/images/VS2022Box/image.yml
+++ b/images/VS2022Box/image.yml
@@ -1,7 +1,8 @@
+description: Windows 11 Enterprise + M365 Apps + VS2022
 publisher: Contoso
 offer: DevBox
 sku: win11-vs2022
-version: 1.0.2
+version: 1.0.3
 os: Windows
 locations:
   - eastus
