--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -1,8 +1,9 @@
 name: Build Images
 
 env:
-  resourceGroup: Compute-Gallery
   galleryName: Contoso
+  resourceGroup: Compute-Gallery
+  tempNameBase: '${{ github.action }}_${{ github.run_number }}_'
 
 concurrency: ${{ github.ref }}
 
@@ -71,6 +72,7 @@ jobs:
             -var "location=${{ matrix.location }}" \
             -var "subscription=$(az account show --query 'id' -o tsv)" \
             -var "resourceGroup=${{ matrix.resourceGroup }}" \
+            -var "tempResourceGroup=${{env.tempNameBase}}${{ matrix.name }}" \
             -var "galleryName=${{ matrix.gallery }}" \
             -var 'replicaLocations=${{ matrix.locations }}' \
             -var "branch=${{ github.ref }}" \
@@ -80,11 +82,16 @@ jobs:
           exit $?
 
   cleanup:
-    needs: build
+    needs:
+      - prepare
+      - build
     runs-on: ubuntu-latest
 
-    # ensure we always cleanup
-    if: always()
+    # this is needed to avoid workflow errors in case of an empty matrix
+    if: always() && ${{ needs.prepare.outputs.build == 'true' }}
+
+    strategy:
+      matrix: ${{ fromJson(needs.prepare.outputs.matrix) }}
 
     steps:
       - name: Login to Azure
@@ -93,8 +100,4 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Delete Artifacts
-        run: |
-
-          while read RESOURCEGROUP; do
-            az group delete --resource-group $RESOURCEGROUP --no-wait --yes
-          done < <(az group list --query "[?starts_with(@.name, 'pkr-Resource-Group-')].name" -o tsv)
+        run: az group delete -g "${{env.tempNameBase}}${{ matrix.name }}" -y --no-wait
