--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -1,8 +1,8 @@
 name: Build Images
 
 env:
-  galleryName: acgGalleryDev1
-  resourceGroup: rg-fidalgo-dev
+  galleryName: acgGalleryDev01
+  resourceGroup: rg-testdevbox-dev
 
 concurrency: ${{ github.ref }}
 
