add hyperv jdk git maven

--- a/images/VSCodeBox/image.yml
+++ b/images/VSCodeBox/image.yml
@@ -1,4 +1,4 @@
-description: Windows 11 Enterprise + M365 Apps + VSCode
+description: Windows 11 Enterprise + M365 Apps + Java
 publisher: Contoso
 offer: DevBox
 sku: win11-vscode
