--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -1,12 +1,9 @@
 name: Build Images
 
-env:
-  galleryName: Contoso
-  resourceGroup: Compute-Gallery
-
 concurrency: ${{ github.ref }}
 
 on:
+  workflow_dispatch:
   push:
     branches: [main]
     paths:
@@ -31,6 +28,14 @@ jobs:
 
       - run: npm install js-yaml
 
+      - name: Get Gallery Definition
+        id: gallery-definitions
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const script = require('./.github/scripts/gallery.js');
+            await script({github, context, core, glob, exec});
+
       - name: Get Image Definitions
         id: packer-definitions
         uses: actions/github-script@v6
@@ -38,11 +43,14 @@ jobs:
           script: |
             const script = require('./.github/scripts/images.js');
             await script({github, context, core, glob, exec});
+        env:
+          galleryName: ${{ steps.gallery-definitions.outputs.name }}
+          galleryResourceGroup: ${{ steps.gallery-definitions.outputs.resourceGroup }}
 
   build:
     needs: prepare
     runs-on: ubuntu-latest
-    continue-on-error: true
+    # continue-on-error: true
 
     # this is needed to avoid workflow errors in case of an empty matrix
     if: ${{ needs.prepare.outputs.build == 'true' }}
@@ -59,25 +67,28 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Setup Packer
-        uses: hashicorp-contrib/setup-packer@v1.0.0
+      - name: Init Packer
+        working-directory: ${{ matrix.source }}
+        run: packer init .
 
-      - name: Build Image
+      - name: Build Image with Packer
         working-directory: ${{ matrix.source }}
         run: |
 
           # run packer to build the image
           packer build -force \
-            -var "image=${{ matrix.name }}" \
-            -var "version=${{ matrix.version }}" \
-            -var "location=${{ matrix.location }}" \
-            -var "subscription=$(az account show --query 'id' -o tsv)" \
-            -var "resourceGroup=${{ matrix.resourceGroup }}" \
-            -var "tempResourceGroup=${{ matrix.gallery }}-${{ matrix.name }}-${{ github.run_number }}" \
-            -var "galleryName=${{ matrix.gallery }}" \
-            -var 'replicaLocations=${{ matrix.locations }}' \
             -var "branch=${{ github.ref }}" \
             -var "commit=${{ github.sha }}" \
+            -var "galleryName=${{ matrix.galleryName }}" \
+            -var "galleryResourceGroup=${{ matrix.galleryResourceGroup }}" \
+            -var "image=${{ matrix.name }}" \
+            -var 'replicaLocations=${{ matrix.locations }}' \
+            -var "location=${{ matrix.location }}" \
+            -var "tempResourceGroup=${{ matrix.tempResourceGroup }}" \
+            -var "buildResourceGroup=${{ matrix.buildResourceGroup }}" \
+            -var "resolvedResourceGroup=${{ matrix.resolvedResourceGroup }}" \
+            -var "subscription=$(az account show --query 'id' -o tsv)" \
+            -var "version=${{ matrix.version }}" \
             . # <== run in the current folder
 
           exit $?
@@ -96,9 +107,11 @@ jobs:
 
     steps:
       - name: Login to Azure
+        if: ${{ matrix.tempResourceGroup != '' }}
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Delete Artifacts
-        run: az group delete -g "${{ matrix.gallery }}-${{ matrix.name }}-${{ github.run_number }}" -y --no-wait || true
+        if: ${{ matrix.tempResourceGroup != '' }}
+        run: az group delete -g "${{ matrix.tempResourceGroup }}" -y --no-wait || true
