--- a/images/VSCodeBox3/image.yml
+++ b/images/VSCodeBox3/image.yml
@@ -1,4 +1,4 @@
-description: Windows 11 Enterprise + M365 Apps + VSCode
+description: Windows 11 Enterprise + M365 Apps + SubSystem
 publisher: Contoso3
 offer: DevBox3
 sku: win11-vscode
