fix issues on windows runners

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "**/obj": true,
         "**/.git": true,
         "**/.DS_Store": true,
-        "**/__pycache__": true
+        "**/__pycache__": true,
+        ".github/actions/images/dist": true,
+        ".github/actions/images/lib": true,
+        ".github/actions/images/node_modules": true,
     }
 }
