updates to support aci secure deployments

--- a/.github/workflows/build_images.yml
+++ b/.github/workflows/build_images.yml
@@ -9,13 +9,15 @@ on:
     paths:
       - 'images/**'
       - 'scripts/**'
-      # - 'tools/**'
+      # - 'builder/**'
       # - '.github/**'
 
 jobs:
   prepare:
     # runs-on: windows-latest
     runs-on: ubuntu-latest
+
+    if: "!contains(join(github.event.commits.*.message), '+nobuild')"
 
     outputs:
       build: ${{ steps.images.outputs.build }}
@@ -26,7 +28,7 @@ jobs:
 
       - name: Get Image Definitions
         id: images
-        run: python "./tools/images.py"
+        run: python "./builder/image.py"
 
   build:
     needs: prepare
@@ -48,5 +50,37 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      # OR
+
+      # - name: Login to Azure
+      #   run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+
       - name: Build ${{ matrix.name }} with ${{ matrix.builder }}
-        run: python "./tools/build.py" --suffix ${{ github.run_number }} --images ${{ matrix.name }} --build
+        run: python "./builder/build.py" --suffix ${{ github.run_number }} --images ${{ matrix.name }}
+
+  # build:
+  #   # runs-on: windows-latest
+  #   runs-on: ubuntu-latest
+
+  #   if: "!contains(join(github.event.commits.*.message), '+nobuild')"
+
+  #   env:
+  #     STORAGE_ACCOUNT: devboximagesstorage
+  #     SUBNET_ID: /subscriptions/e5f715ae-6c72-4a5c-87c8-495590c34828/resourceGroups/DevBox-Images/providers/Microsoft.Network/virtualNetworks/devbox-images-vnet/subnets/builders
+
+  #   steps:
+  #     - uses: actions/checkout@v2
+
+  #     # - name: Login to Azure
+  #     #   uses: azure/login@v1
+  #     #   with:
+  #     #     creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+  #     # OR
+
+  #     - name: Login to Azure
+  #       run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+
+  #     - name: Deploy Build ACI Containers
+  #       id: images
+  #       run: python "./builder/aci.py" --async --repository "${{ github.repositoryUrl }}" --token "${{ github.token }}" --client-id "${{ secrets.AZURE_CLIENT_ID }}" --client-secret "${{ secrets.AZURE_CLIENT_SECRET }}" --storage-account "${{ env.STORAGE_ACCOUNT }}" --subnet-id "${{ env.SUBNET_ID }}"
